test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/deprecated_attr.sw
library;

#[deprecated]
pub struct Ok { }

#[deprecated]
#[deprecated(note = "note")]
pub struct NotOk { }